feat(ingestion): read and parse raw CSV file line by line